GNOME Bugzilla – Bug 685512
rtpgstdepay has a memory leak
Last modified: 2012-10-04 18:49:25 UTC
rtpgstdepay does not correctly free the rtp buffer.
Created attachment 225840 [details] [review] Fixes the memory leak
Thanks, pushed: commit 47a8eb7ca89cb2339f5220fb674bc3d1affeadb8 Author: Rasmus Rohde <rohde@duff.dk> Date: Thu Oct 4 20:32:45 2012 +0200 gstrtpdepay: don't leak input buffer The rtp buffer is never unmapped in the normal code exit path of gst_rtp_gst_depay_process(..) resulting in a memory leak. https://bugzilla.gnome.org/show_bug.cgi?id=685512 (sorry I messed up the summary prefix).