gstrtpdepay: don't leak input buffer

The rtp buffer is never unmapped in the normal code exit path
of gst_rtp_gst_depay_process(..) resulting in a memory leak.

https://bugzilla.gnome.org/show_bug.cgi?id=685512